@@ -1,3 +1,6 @@
+2007-04-10  Kalpit Desai <kvdesai@email.unc.edu>
+	* savefig.m: external code that allows exporting .fig files into various image formats, with specified resolution. Very reliable. Needs Ghostscript in system path.
+
 2006-12-11  Jeremy Cribb <jcribb@email.unc.edu>
 	* polyfitw.m:  external code that allows error weighting for polynomial fits such that data with low error is weighted more heavily than data with high error.
 
